<resources>
    <string name="app_name">Hush Line</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Hush Line</string>
    <string name="messages_list_fragment_label">Messages</string>
    <string name="message_preview_fragment_label"></string>
    <string name="settings_fragment_label">Settings</string>
    <string name="notification_fragment_label">Notifications</string>
    <string name="encryption_fragment_label">Encryption</string>
    <string name="about_fragment_label">About Hush Line</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="inbox">Inbox</string>
    <string name="hushline_is_running">Hush Line is running</string>
    <string name="main_instruction"><b>Anyone</b> can send a private message to you with <b>Tor Browser</b> using this address:</string>
    <string name="onion_address_sample">gmvtdrcqwkefh6uc3c6khm4hxhmrsbnu24sphpy6b6vaqxfwyz7lskad.onion</string>
    <string name="reuse_onion_addr">Reuse this onion address</string>
    <string name="share_address">Share Address</string>
    <string name="view_qrcode">View QR Code</string>
    <string name="subhead_sample">2027–05–08</string>
    <string name="supporting_text_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna liqu…</string>
    <string name="supporting_text_full_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="notifications">Notifications</string>
    <string name="encryption">Encryption</string>
    <string name="about_hush_line">About Hush Line</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="smtp_settings">SMTP Settings</string>
    <string name="email_address">Email Address</string>
    <string name="smtp_address">SMTP Address</string>
    <string name="password">Password</string>
    <string name="smtp_port">SMTP Port</string>
    <string name="encryption_headline">Hush Line creates a new PGP key pair when you install the app.</string>
    <string name="upload_custom_pgp">Upload a Custom PGP Key</string>
    <string name="rotatePGPKeyText">Rotate PGP Keys</string>
    <string name="rotatePGPInstr">Periodically create new keys. This ensures that even if an old key is  compromised, new messages will remain safe.</string>
    <string name="learn_more_about_encrption">Learn more about PGP Encryption</string>
    <string name="about">Hush Line is a free and open-source app to host a private tip line enabling anyone to send you encrypted messages without requiring technical expertise, downloading software, generating keys, or creating an account.\n\nLearn more at https://hushline.app.</string>
    <string name="credits">Credits</string>
    <string name="eng_credits">Ese Udom, Saptak Sengupta</string>
    <string name="engineering">Engineering</string>
    <string name="research">Research</string>
    <string name="research_credits">Dr. Ashley Di Battista</string>
    <string name="design">Design</string>
    <string name="design_credits">Glenn Sorrentino</string>
    <string name="error_displaying_message">Failed to show message.</string>
    <string name="no_messages">No messages</string>
    <string name="post_notification_permission_rationale_title">We need permission to show you push notifications</string>
    <string name="post_notification_permission_rationale">We need you to grant permission to notify you when you get a new message. If you don\'t want that, that\'s fine as well.</string>
    <string name="OK">OK</string>
    <string name="share_dialog_title">Share via</string>
    <string name="close">Close</string>
    <string name="qr_code_failed">Failed to create QR code. Try again.</string>
    <string name="running_notification_title">HushLine is currently running.</string>
    <string name="starting_notification_title">Starting hush line…</string>
    <string name="starting_notification_text">This may take a while.</string>
    <string name="notification_running_title">Hush Line available.</string>
    <string name="notification_running_text">Tap to access the address for receiving messages and tips.</string>
    <string name="notification_error_title">Hush Line encountered an issue.</string>
    <string name="notification_error_text">Tap to see details.</string>
    <string name="notification_channel_name_foreground">Hush Line running status</string>
    <string name="notification_channel_name_running">Messaging address available</string>
    <string name="notification_channel_name_error">Error</string>
    <string name="hushline_starting">Hush Line starting…</string>
    <string name="onion_url">http://%1$s.onion</string>
    <string name="hushline_stopping">Hush Line stopping…</string>
    <string name="hushline_stopped">Hush Line stopped.</string>
    <string name="hushline_error">Hush Line error.</string>
</resources>