<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="24dp"
    android:paddingHorizontal="24dp"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/label"
                android:text="@string/about"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/creditsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/label_1"
                android:text="@string/credits"
                android:textStyle="bold"
                android:layout_marginTop="42dp"
                app:layout_constraintTop_toBottomOf="@id/about"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/engDeptCreditContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/creditsText">

                <TextView
                    android:id="@+id/engineeringText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/label_text"
                    android:text="@string/engineering"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/label"
                    android:text="@string/eng_credits"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/engineeringText"
                    app:layout_constraintLeft_toLeftOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/resDeptCreditContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/engDeptCreditContainer">

                <TextView
                    android:id="@+id/researchText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/label_text"
                    android:text="@string/research"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/label"
                    android:text="@string/research_credits"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/researchText"
                    app:layout_constraintLeft_toLeftOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/desDeptCreditContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/resDeptCreditContainer">

                <TextView
                    android:id="@+id/designText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/label_text"
                    android:text="@string/design"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/label"
                    android:text="@string/design_credits"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/designText"
                    app:layout_constraintLeft_toLeftOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>