<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="24dp"
    android:paddingVertical="18dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/encryptionHeadlineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/label_1"
        android:layout_marginBottom="16dp"
        android:text="@string/encryption_headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/uploadCustomPGPText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/label"
        android:text="@string/upload_custom_pgp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/encryptionHeadlineText"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rotatePGPKeysContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/uploadCustomPGPText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:alpha="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rotatePGPTextContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/rotatePGPText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/input_text"
                android:text="@string/rotatePGPKeyText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="250dp"
                android:gravity="start"
                style="@style/label_1"
                android:text="@string/rotatePGPInstr"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/rotatePGPText"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/switchInclude1"
            layout="@layout/custom_switch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <!--android:layout_height="32dp"
            android:layout_width="52dp"
            android:layout_marginStart="20dp"-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/learnMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        style="@style/input_text"
        android:text="@string/learn_more_about_encrption"
        app:layout_constraintTop_toBottomOf="@id/rotatePGPKeysContainer"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>