<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notificationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:paddingHorizontal="24dp"
        android:text="@string/notifications"
        android:textAllCaps="false"
        style="@style/label"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/encryptionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:paddingHorizontal="24dp"
        android:text="@string/encryption"
        android:textStyle="normal"
        android:textAllCaps="false"
        style="@style/label"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toBottomOf="@id/notificationBtn"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/aboutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:paddingHorizontal="24dp"
        android:text="@string/about_hush_line"
        android:textStyle="normal"
        android:textAllCaps="false"
        style="@style/label"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toBottomOf="@id/encryptionBtn"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>